# Triton-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: fragment.glsl  vertex.glsl  vertex3D.glsl
include/engine/: Engine.h
include/engine/core/: Application.h  Engine.h  EngineContext.h
include/engine/system/: Input.h  Renderer.h  Window.h
include/game/: TestGame.h
include/graphics/: Camera.h  Mesh.h  Shader.h
include/math/: Transform3D.h
include/utils/: Logger.h
src/: main.cpp
src/Test/: PiramidGame.cpp  PiramidGame.h  TestGame.cpp  TestGame.h
src/engine/: Engine.cpp
src/engine/core/: Engine.cpp
src/engine/system/: Input.cpp  Renderer.cpp  Window.cpp
src/graphics/: Camera.cpp  Mesh.cpp  Shader.cpp
src/math/: Transform3D.cpp
src/utils/: Logger.cpp
